@@ -1,0 +1,50 @@
+anchor148_9124	pac7556_20928	8327	0.890	0	797	9124	9124	0	0	8581	20928	overlap
+anchor148_9124	pac7443_11454	2665	0.894	0	6459	9124	9124	0	0	2742	11454	overlap
+anchor236_6430	pac7556_20928	6430	0.869	0	0	6430	6430	0	8601	15361	20928	contained
+anchor236_6430	pac8852_20444	1099	0.839	0	5331	6430	6430	0	0	1183	20444	overlap
+anchor236_6430	pac7443_11454	6430	0.889	0	0	6430	6430	0	2759	9226	11454	contained
+anchor575_1626	pac7556_20928	1626	0.864	0	0	1626	1626	0	15343	17070	20928	contained
+anchor575_1626	pac8852_20444	1626	0.859	0	0	1626	1626	0	1166	2724	20444	contained
+anchor575_1626	pac8559_13190	1626	0.884	0	0	1626	1626	0	329	2089	13190	contained
+anchor575_1626	pac4710_11440	1626	0.841	0	0	1626	1626	0	410	2217	11440	contained
+anchor575_1626	pac1461_9030	1493	0.910	0	133	1626	1626	0	0	1581	9030	overlap
+anchor575_1626	pac4745_7148	1626	0.857	0	0	1626	1626	0	4459	6199	7148	contained
+anchor575_1626	pac6425_4471	1080	0.888	0	546	1626	1626	0	0	1136	4471	overlap
+anchor576_1624	pac7556_20928	1624	0.867	0	0	1624	1624	0	17033	18740	20928	contained
+anchor576_1624	pac8852_20444	1624	0.888	0	0	1624	1624	0	2685	4271	20444	contained
+anchor576_1624	pac8559_13190	1624	0.864	0	0	1624	1624	0	2043	3821	13190	contained
+anchor576_1624	pac4710_11440	1624	0.846	0	0	1624	1624	0	2174	3956	11440	contained
+anchor576_1624	pac1461_9030	1624	0.904	0	0	1624	1624	0	1537	3236	9030	contained
+anchor576_1624	pac6425_4471	1624	0.854	0	0	1624	1624	0	1094	2892	4471	contained
+pac7556_20928	anchor148_9124	8581	0.890	0	0	8581	20928	0	797	9124	9124	overlap
+pac7556_20928	anchor236_6430	6760	0.869	0	8601	15361	20928	0	0	6430	6430	contains
+pac7556_20928	anchor575_1626	1727	0.864	0	15343	17070	20928	0	0	1626	1626	contains
+pac7556_20928	anchor576_1624	1707	0.867	0	17033	18740	20928	0	0	1624	1624	contains
+pac8852_20444	anchor236_6430	1183	0.839	0	0	1183	20444	0	5331	6430	6430	overlap
+pac8852_20444	anchor575_1626	1558	0.859	0	1166	2724	20444	0	0	1626	1626	contains
+pac8852_20444	anchor576_1624	1586	0.888	0	2685	4271	20444	0	0	1624	1624	contains
+pac8852_20444	pac1461_9030	8217	0.794	0	1295	9512	20444	0	0	9030	9030	contains
+pac8852_20444	pac4745_7148	3617	0.759	0	0	3617	20444	0	3366	7148	7148	overlap
+pac8559_13190	anchor575_1626	1760	0.884	0	329	2089	13190	0	0	1626	1626	contains
+pac8559_13190	anchor576_1624	1778	0.864	0	2043	3821	13190	0	0	1624	1624	contains
+pac8559_13190	pac4745_7148	3100	0.778	0	0	3100	13190	0	4141	7148	7148	overlap
+pac7443_11454	anchor148_9124	2742	0.894	0	0	2742	11454	0	6459	9124	9124	overlap
+pac7443_11454	anchor236_6430	6467	0.889	0	2759	9226	11454	0	0	6430	6430	contains
+pac4710_11440	anchor575_1626	1807	0.841	0	410	2217	11440	0	0	1626	1626	contains
+pac4710_11440	anchor576_1624	1782	0.846	0	2174	3956	11440	0	0	1624	1624	contains
+pac4710_11440	pac1461_9030	9108	0.800	0	543	9651	11440	0	0	9030	9030	contains
+pac4710_11440	pac4745_7148	3231	0.761	0	0	3231	11440	0	4106	7148	7148	overlap
+pac1461_9030	anchor575_1626	1581	0.910	0	0	1581	9030	0	133	1626	1626	overlap
+pac1461_9030	anchor576_1624	1699	0.904	0	1537	3236	9030	0	0	1624	1624	contains
+pac1461_9030	pac8852_20444	9030	0.794	0	0	9030	9030	0	1295	9512	20444	contained
+pac1461_9030	pac4710_11440	9030	0.800	0	0	9030	9030	0	543	9651	11440	contained
+pac1461_9030	pac4745_7148	2535	0.808	0	0	2535	9030	0	4599	7148	7148	overlap
+pac4745_7148	anchor575_1626	1740	0.857	0	4459	6199	7148	0	0	1626	1626	contains
+pac4745_7148	pac8852_20444	3782	0.759	0	3366	7148	7148	0	0	3617	20444	overlap
+pac4745_7148	pac8559_13190	3007	0.778	0	4141	7148	7148	0	0	3100	13190	overlap
+pac4745_7148	pac4710_11440	3042	0.761	0	4106	7148	7148	0	0	3231	11440	overlap
+pac4745_7148	pac1461_9030	2549	0.808	0	4599	7148	7148	0	0	2535	9030	overlap
+pac4745_7148	pac6425_4471	2097	0.785	0	5051	7148	7148	0	0	2151	4471	overlap
+pac6425_4471	anchor575_1626	1136	0.888	0	0	1136	4471	0	546	1626	1626	overlap
+pac6425_4471	anchor576_1624	1798	0.854	0	1094	2892	4471	0	0	1624	1624	contains
+pac6425_4471	pac4745_7148	2151	0.785	0	0	2151	4471	0	5051	7148	7148	overlap
