@@ -1,6 +1,7 @@
 Revision history for App-Anchr
 
 {{$NEXT}}
+    - `anchr ovlpreplace`
 
 0.0.14 2017-02-24T09:45:25Z
     - `anchr group`
